source/3rdparty/clblast/source/clblast.pas

function CLBlastSgemmStridedBatched(const layout: CLBlastLayout; const a_transpose: CLBlastTranspose; const b_transpose: CLBlastTranspose; const m: SizeInt; const n: SizeInt; const k: SizeInt; const alpha: single; const a_buffer: cl_mem; const a_offset: SizeInt; const a_ld: SizeInt; const a_stride: SizeInt; const b_buffer: cl_mem; const b_offset: SizeInt; const b_ld: SizeInt; const b_stride: SizeInt; const beta: single; c_buffer: cl_mem; const c_offset: SizeInt; const c_ld: SizeInt; const c_stride: SizeInt; const batch_count: SizeInt; queue: Pcl_command_queue; event: Pcl_event):CLBlastStatusCode; winapi; external libname;
function CLBlastDgemmStridedBatched(const layout: CLBlastLayout; const a_transpose: CLBlastTranspose; const b_transpose: CLBlastTranspose; const m: SizeInt; const n: SizeInt; const k: SizeInt; const alpha: double; const a_buffer: cl_mem; const a_offset: SizeInt; const a_ld: SizeInt; const a_stride: SizeInt; const b_buffer: cl_mem; const b_offset: SizeInt; const b_ld: SizeInt; const b_stride: SizeInt; const beta: double; c_buffer: cl_mem; const c_offset: SizeInt; const c_ld: SizeInt; const c_stride: SizeInt; const batch_count: SizeInt; queue: Pcl_command_queue; event: Pcl_event):CLBlastStatusCode; winapi; external libname;
function CLBlastCgemmStridedBatched(const layout: CLBlastLayout; const a_transpose: CLBlastTranspose; const b_transpose: CLBlastTranspose; const m: SizeInt; const n: SizeInt; const k: SizeInt; const alpha: cl_float2; const a_buffer: cl_mem; const a_offset: SizeInt; const a_ld: SizeInt; const a_stride: SizeInt; const b_buffer: cl_mem; const b_offset: SizeInt; const b_ld: SizeInt; const b_stride: SizeInt; const beta: cl_float2; c_buffer: cl_mem; const c_offset: SizeInt; const c_ld: SizeInt; const c_stride: SizeInt; const batch_count: SizeInt; queue: Pcl_command_queue; event: Pcl_event):CLBlastStatusCode; winapi; external libname;
function CLBlastZgemmStridedBatched(const layout: CLBlastLayout; const a_transpose: CLBlastTranspose; const b_transpose: CLBlastTranspose; const m: SizeInt; const n: SizeInt; const k: SizeInt; const alpha: cl_double2; const a_buffer: cl_mem; const a_offset: SizeInt; const a_ld: SizeInt; const a_stride: SizeInt; const b_buffer: cl_mem; const b_offset: SizeInt; const b_ld: SizeInt; const b_stride: SizeInt; const beta: cl_double2; c_buffer: cl_mem; const c_offset: SizeInt; const c_ld: SizeInt; const c_stride: SizeInt; const batch_count: SizeInt; queue: Pcl_command_queue; event: Pcl_event):CLBlastStatusCode; winapi; external libname;
function CLBlastHgemmStridedBatched(const layout: CLBlastLayout; const a_transpose: CLBlastTranspose; const b_transpose: CLBlastTranspose; const m: SizeInt; const n: SizeInt; const k: SizeInt; const alpha: cl_half; const a_buffer: cl_mem; const a_offset: SizeInt; const a_ld: SizeInt; const a_stride: SizeInt; const b_buffer: cl_mem; const b_offset: SizeInt; const b_ld: SizeInt; const b_stride: SizeInt; const beta: cl_half; c_buffer: cl_mem; const c_offset: SizeInt; const c_ld: SizeInt; const c_stride: SizeInt; const batch_count: SizeInt; queue: Pcl_command_queue; event: Pcl_event):CLBlastStatusCode; winapi; external libname;
function CLBlastSgemmWithTempBuffer(const layout: CLBlastLayout; const a_transpose: CLBlastTranspose; const b_transpose: CLBlastTranspose; const m: SizeInt; const n: SizeInt; const k: SizeInt; const alpha: single; const a_buffer: cl_mem; const a_offset: SizeInt; const a_ld: SizeInt; const b_buffer: cl_mem; const b_offset: SizeInt; const b_ld: SizeInt; const beta: single; c_buffer: cl_mem; const c_offset: SizeInt; const c_ld: SizeInt; queue: Pcl_command_queue; event: Pcl_event; temp_buffer: cl_mem):CLBlastStatusCode; winapi; external libname;
function CLBlastDgemmWithTempBuffer(const layout: CLBlastLayout; const a_transpose: CLBlastTranspose; const b_transpose: CLBlastTranspose; const m: SizeInt; const n: SizeInt; const k: SizeInt; const alpha: double; const a_buffer: cl_mem; const a_offset: SizeInt; const a_ld: SizeInt; const b_buffer: cl_mem; const b_offset: SizeInt; const b_ld: SizeInt; const beta: double; c_buffer: cl_mem; const c_offset: SizeInt; const c_ld: SizeInt; queue: Pcl_command_queue; event: Pcl_event; temp_buffer: cl_mem):CLBlastStatusCode; winapi; external libname;
function CLBlastCgemmWithTempBuffer(const layout: CLBlastLayout; const a_transpose: CLBlastTranspose; const b_transpose: CLBlastTranspose; const m: SizeInt; const n: SizeInt; const k: SizeInt; const alpha: cl_float2; const a_buffer: cl_mem; const a_offset: SizeInt; const a_ld: SizeInt; const b_buffer: cl_mem; const b_offset: SizeInt; const b_ld: SizeInt; const beta: cl_float2; c_buffer: cl_mem; const c_offset: SizeInt; const c_ld: SizeInt; queue: Pcl_command_queue; event: Pcl_event; temp_buffer: cl_mem):CLBlastStatusCode; winapi; external libname;
function CLBlastZgemmWithTempBuffer(const layout: CLBlastLayout; const a_transpose: CLBlastTranspose; const b_transpose: CLBlastTranspose; const m: SizeInt; const n: SizeInt; const k: SizeInt; const alpha: cl_double2; const a_buffer: cl_mem; const a_offset: SizeInt; const a_ld: SizeInt; const b_buffer: cl_mem; const b_offset: SizeInt; const b_ld: SizeInt; const beta: cl_double2; c_buffer: cl_mem; const c_offset: SizeInt; const c_ld: SizeInt; queue: Pcl_command_queue; event: Pcl_event; temp_buffer: cl_mem):CLBlastStatusCode; winapi; external libname;
function CLBlastHgemmWithTempBuffer(const layout: CLBlastLayout; const a_transpose: CLBlastTranspose; const b_transpose: CLBlastTranspose; const m: SizeInt; const n: SizeInt; const k: SizeInt; const alpha: cl_half; const a_buffer: cl_mem; const a_offset: SizeInt; const a_ld: SizeInt; const b_buffer: cl_mem; const b_offset: SizeInt; const b_ld: SizeInt; const beta: cl_half; c_buffer: cl_mem; const c_offset: SizeInt; const c_ld: SizeInt; queue: Pcl_command_queue; event: Pcl_event; temp_buffer: cl_mem):CLBlastStatusCode; winapi; external libname;
function CLBlastSGemmTempBufferSize(const layout: CLBlastLayout; const a_transpose: CLBlastTranspose; const b_transpose: CLBlastTranspose; const m: SizeInt; const n: SizeInt; const k: SizeInt; const a_offset: SizeInt; const a_ld: SizeInt; const b_offset: SizeInt; const b_ld: SizeInt; const c_offset: SizeInt; const c_ld: SizeInt; queue: Pcl_command_queue; temp_buffer_size: PSizeInt):CLBlastStatusCode; winapi; external libname;
function CLBlastDGemmTempBufferSize(const layout: CLBlastLayout; const a_transpose: CLBlastTranspose; const b_transpose: CLBlastTranspose; const m: SizeInt; const n: SizeInt; const k: SizeInt; const a_offset: SizeInt; const a_ld: SizeInt; const b_offset: SizeInt; const b_ld: SizeInt; const c_offset: SizeInt; const c_ld: SizeInt; queue: Pcl_command_queue; temp_buffer_size: PSizeInt):CLBlastStatusCode; winapi; external libname;
function CLBlastCGemmTempBufferSize(const layout: CLBlastLayout; const a_transpose: CLBlastTranspose; const b_transpose: CLBlastTranspose; const m: SizeInt; const n: SizeInt; const k: SizeInt; const a_offset: SizeInt; const a_ld: SizeInt; const b_offset: SizeInt; const b_ld: SizeInt; const c_offset: SizeInt; const c_ld: SizeInt; queue: Pcl_command_queue; temp_buffer_size: PSizeInt):CLBlastStatusCode; winapi; external libname;
function CLBlastZGemmTempBufferSize(const layout: CLBlastLayout; const a_transpose: CLBlastTranspose; const b_transpose: CLBlastTranspose; const m: SizeInt; const n: SizeInt; const k: SizeInt; const a_offset: SizeInt; const a_ld: SizeInt; const b_offset: SizeInt; const b_ld: SizeInt; const c_offset: SizeInt; const c_ld: SizeInt; queue: Pcl_command_queue; temp_buffer_size: PSizeInt):CLBlastStatusCode; winapi; external libname;
function CLBlastHGemmTempBufferSize(const layout: CLBlastLayout; const a_transpose: CLBlastTranspose; const b_transpose: CLBlastTranspose; const m: SizeInt; const n: SizeInt; const k: SizeInt; const a_offset: SizeInt; const a_ld: SizeInt; const b_offset: SizeInt; const b_ld: SizeInt; const c_offset: SizeInt; const c_ld: SizeInt; queue: Pcl_command_queue; temp_buffer_size: PSizeInt):CLBlastStatusCode; winapi; external libname;
function CLBlastClearCache():CLBlastStatusCode; winapi; external libname;
function CLBlastFillCache(const device: cl_device_id):CLBlastStatusCode; winapi; external libname;
function CLBlastOverrideParameters(const device: cl_device_id; const kernel_name: PAnsiChar; const precision: CLBlastPrecision; const num_parameters: SizeInt; const parameters_names: PPAnsiChar; const parameters_values: PSizeInt):CLBlastStatusCode; winapi; external libname;

function FloatToHalf(const value:single):half;
function HalfToFloat(const value:half):single;

implementation

type
    // 32-bit union for conversions
  ConversionBits = record
    case boolean of
      false : (i32: longword);
      true  : (f32: single);
  end;
// =================================================================================================
